--- a/css/styles.css
+++ b/css/styles.css
@@ -55,11 +55,9 @@
 }
 
 .avatar {
-  border-radius: 50%;
   display: inline-block;
   position: relative;
-  width: 100%;
-  height: 80%;
+  width: 80%;
 }
 
 .terms {
@@ -4520,10 +4518,11 @@ textarea.form-control-lg {
   flex-direction: column;
   min-width: 0;
   word-wrap: break-word;
-  background-color: #fff;
+  background-color: #012c37;
   background-clip: border-box;
   border: 1px solid rgba(0, 0, 0, 0.125);
-  border-radius: 0.25rem;
+  border-radius: 0.5rem;
+  color: #fff;
 }
 .card > hr {
   margin-right: 0;
